--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>7.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.1.4</version>
+        </dependency>
     </dependencies>
 
 
